<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AndrolircMain!</string>
    <string name="app_name">Irdroid</string>
    <string name="vol_up_str">VOL +</string>
    <string name="vol_down_str">VOL -</string>
    <string name="mute">MUTE</string>
    <string name="tvplus">CH+</string>
    <string name="tvminus">CH-</string>
    <string name="power">POWER</string>
 <string name="planet_prompt">Select a device:</string>
  <string name="select">Select a device:</string>
  <string name="info">To <b>use</b> this app you have to <b>purchase</b> Irdroid module from <a href="http://www.georgibakalski.info">Irdroid website</a> After you purchase a module the app can be used to control your favourite TV or STB. Please tap MENU->UpdateDB to update the database of the supported remotes.</string> 

</resources>
